@@ -1378,13 +1378,19 @@ begin
      Put_Line( "  " & bold( "pragma" ) & " " &
        "ada_95 - enforce Ada 95 restrictions" );
      Put_Line( "  " & bold( "pragma" ) & " " &
+       "advise - request team advice/assistance" );
+     Put_Line( "  " & bold( "pragma" ) & " " &
        "annotate( [type,]""text"" ) - embed a comment for help command" );
      Put_Line( "  " & bold( "pragma" ) & " " &
        "assert( condition ) - with --debug/--test, terminate program on condition fail" );
      Put_Line( "  " & bold( "pragma" ) & " " &
+       "clarify - request programmer clarification" );
+     Put_Line( "  " & bold( "pragma" ) & " " &
        "debug( `commands` ) - with --debug, execute debug commands" );
      Put_Line( "  " & bold( "pragma" ) & " " &
        "depreciated/deprecated( ""newscript"" ) - report script as obsolete by newscript" );
+     Put_Line( "  " & bold( "pragma" ) & " " &
+       "dispute - request program review" );
      Put_Line( "  " & bold( "pragma" ) & " " &
        "export( shell | local_memcache | memcache | session , var ) - export a variable" );
      Put_Line( "  " & bold( "pragma" ) & " " &
@@ -1407,6 +1413,10 @@ begin
        "no_command_hash - do not store command pathnames in the hash table" );
      Put_Line( "  " & bold( "pragma" ) & " " &
        "prompt_script( `commands` ) - commands to draw command prompt" );
+     Put_Line( "  " & bold( "pragma" ) & " " &
+       "propose - suggest a change to a program" );
+     Put_Line( "  " & bold( "pragma" ) & " " &
+       "refactor - request programmer optimize program" );
      Put_Line( "  " & bold( "pragma" ) & " " &
        "restriction( no_annotate_todos ) - " &
          "must not have annotate/todo" );
