@@ -94,6 +94,9 @@ CHANGES SINCE 1.4
 
 30. New: array variables may be deleted with unset.  However, anonymous array types will linger until the end of block.
 
+31. New: team package.  Contains the team.programmer record.  [docs] [tests]
+
+32. New: teamwork pragmas.  pragma advise, clarify, dispute, propose, refactor.
 
 ??. Around parser.adb 5812: doesn't allow mixing of shell and adascript parameters in a pipeline.  Fix this??
 
